bugfix and change login system and implement service methods in their impl class